--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,10 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+}
+
+.header-email-link:hover {
   color: var(--accent-color);
 }
 
@@ -77,6 +81,10 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
+}
+
+.header-tel-link:hover {
+  color: var(--accent-color);
 }
 
 /* First Section */
