--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,6 @@ body {
 
 .team-list-item {
   background: #ffffff;
-
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -192,7 +191,7 @@ body {
 }
 
 .footer-address {
-  font-weight: normal;
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -215,4 +214,53 @@ body {
   letter-spacing: 0.03em;
   color: var(--primary-title-color);
   opacity: 0.6;
+}
+
+/* Portfolio */
+/* Filter */
+
+.filter-link {
+  background-color: var(--filter-btn);
+  border-radius: 4px;
+  padding: 6px 22px;
+  color: var(--secondary-title-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.filter-link:hover {
+  background-color: var(--accent-color);
+  color: var(--primary-title-color);
+}
+
+.filter-link.active {
+  background-color: var(--accent-color);
+  color: var(--primary-title-color);
+}
+
+/* Product */
+
+.product-item {
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+}
+
+.product-title {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--secondary-title-color);
+}
+
+.product-description {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
 }
